Add images to Wikibase slides

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -388,12 +388,21 @@
             </section>
 
             <section>
-                <p>Picture of parser function be here</p>
+                <pre><code class="PHP">
+{{MusicBrainz meta
+  |type=artist
+  |mbid={{{mbid|{{{id|{{{1|{{#if:
+            {{#property:p434}} | {{#property:p434}} |}}
+        }}}}}}}}}
+  |name={{{name|{{PAGENAME}}}}}
+  |wdc-property=p434
+  |wdc-category=MusicBrainz artist
+}}
+
+                </code></pre>
             </section>
 
-            <section>
-                <p>Picture of Lua be here</p>
-            </section>
+            <section data-background="img/lua.png" data-transition="linear" data-background-transition="slide"></section>
 
             <section>
                 <img src="img/sidebar.png" />
@@ -409,7 +418,9 @@
         </section>
 
         <section>
-            <!-- Examples of cool things build on top of WD -->
+            <section data-background="img/tempo-spatial.png" data-transition="linear" data-background-transition="slide"></section>
+            <section data-background="img/reasonator.png" data-transition="linear" data-background-transition="slide"></section>
+            <section data-background="img/mars-missions.png" data-transition="linear" data-background-transition="slide"></section>
         </section>
 
         <section>
