collapse Wikibase component slides

--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -473,19 +473,12 @@
             <section data-background="img/wikibase-components.png" data-transition="linear" data-background-transition="slide"></section>
 
             <section>
-                <p>DataModel & Serialization</p>
-            </section>
-
-            <section>
-                <p>DataValues (+ SMW)</p>
-            </section>
-
-            <section>
-                <p>QueryEngine (+ SMW)</p>
-            </section>
-
-            <section>
-                <p>Ask (+ SMW)</p>
+                <ul>
+                    <li class="fragment roll-in highlight-current-green">Wikibase DataModel </li>
+                    <li class="fragment roll-in highlight-current-green">Wikibase DataModel Serialization</li>
+                    <li class="fragment roll-in highlight-current-green">Wikibase QueryEngine</li>
+                    <li class="fragment roll-in highlight-current-green">Ask (and Ask Serialization)</li>
+                </ul>
             </section>
         </section>
 
@@ -493,7 +486,7 @@
             <p>
                 <img src="img/cat_question2.jpg" />
 
-                <br /><br />bit.ly/wikibase-smwcon<br /><br />
+                <br /><br />bit.ly/wikibase-smwcon &nbsp;&nbsp;&nbsp;&nbsp; wikiba.se<br /><br />
             </p>
         </section>
 
