Fix slide order issue

--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -192,14 +192,6 @@
             </section>
 
             <section>
-                <h3>Special:Properties</h3>
-                <p>
-                    Search form for user-defined properties
-                    <img src="img/smw-19-special-properties.png" alt="Special:Properties">
-                </p>
-            </section>
-
-            <section>
                 <h3>ApiInfo</h3>
                 <p>api.php?action=smwinfo</p>
                 <p>
@@ -210,6 +202,14 @@
 
             <section>
                 <img src="img/wikiapiary-sem-stats.png" />
+            </section>
+
+            <section>
+                <h3>Special:Properties</h3>
+                <p>
+                    Search form for user-defined properties
+                    <img src="img/smw-19-special-properties.png" alt="Special:Properties">
+                </p>
             </section>
 
             <section>
@@ -291,6 +291,7 @@
 
             <ul>
                 <li class="fragment roll-in highlight-current-green">File bugs you find and enhancements you want</li>
+                <li class="fragment roll-in highlight-current-green">Become part of the testers group</li>
                 <li class="fragment roll-in highlight-current-green">Add or enhance documentation</li>
                 <li class="fragment roll-in highlight-current-green">Add or enhance translations</li>
                 <li class="fragment roll-in highlight-current-green">Answer questions and participate in discussions</li>
