--- a/smwcon/2014fall/wikibase/index.html
+++ b/smwcon/2014fall/wikibase/index.html
@@ -50,6 +50,9 @@
                 bit.ly/wikibase-smwcon<br /><br />
                 <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2014/Wikibase,_the_Software_behind_Wikidata">SMWCon Fall 2014, Vienna</a>
             </p>
+
+            <br />
+            <small>Use "page down" and "page up" to navigate</small>
         </section>
 
         <section>
