--- a/smwcon/2014fall/yearly/index.html
+++ b/smwcon/2014fall/yearly/index.html
@@ -49,6 +49,9 @@
                 bit.ly/smw-2014<br /><br />
                 <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2014/Current_Status_and_Next_Steps_for_SMW">SMWCon Fall 2014, Vienna</a>
             </p>
+
+            <br />
+            <small>Use "page down" and "page up" to navigate</small>
         </section>
 
         <section>
