--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -250,14 +250,14 @@ class Rectangle extends Square {
 					</p>
 				</section>
 
-				<section>
-					<h3>WTF?</h3>
+				<section data-background="img/cat-wat.jpg" data-transition="linear" data-background-transition="slide">
+					<h3 style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">WTF?</h3>
 
-					<p>Squares are not rectangles?!</p>
+					<p style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">Squares are not rectangles?!</p>
 
-					<p class="fragment">Yeah, they are rectangles</p>
+					<p class="fragment" style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">Yeah, they are rectangles</p>
 
-					<p class="fragment">Contradicting yourself are you?</p>
+					<p class="fragment" style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">Contradicting yourself are you?</p>
 				</section>
 
 				<section>
@@ -275,10 +275,10 @@ class Square {
 					<p class="fragment">It is a code <strong>representing</strong> a square</p>
 				</section>
 
-				<section>
-					<h3>Representatives</h3>
+				<section data-background="img/cat-reflection.jpg" data-transition="linear" data-background-transition="slide">
+					<h3 style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">Representatives</h3>
 
-					<p class="fragment">Do not share the relationships of the things they represent</p>
+					<p class="fragment" style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">Do not share the relationships of the things they represent</p>
 				</section>
 
 				<section>
@@ -333,28 +333,34 @@ class RealNumber extends ComplexNumber {
                 </section>
 
 				<section>
-					<h3>More craziness</h3>
+                    <section>
+                        <h3>More craziness</h3>
 
-					<p>Class <span style="color:lightblue">T</span></p>
-					<p>Class <span style="color:lightgreen">S</span> extends <span style="color:lightblue">T</span></p>
+                        <p>Class <span style="color:lightblue">T</span></p>
+                        <p>Class <span style="color:lightgreen">S</span> extends <span style="color:lightblue">T</span></p>
 
-					<p class="fragment">List&lt;<span style="color:lightgreen">S</span>&gt; is not a subtype of List&lt;<span style="color:lightblue">T</span>&gt;</p>
+                        <p class="fragment">List&lt;<span style="color:lightgreen">S</span>&gt; is not a subtype of List&lt;<span style="color:lightblue">T</span>&gt;</p>
 
-					<p class="fragment">Cannot pass list&lt;Square&gt; to function expecting list&lt;Shape&gt;</p><br />
+                        <p class="fragment">Cannot pass list&lt;Square&gt; to function expecting list&lt;Shape&gt;</p><br />
 
-					<pre class="fragment"><code contenteditable class="PHP">
+                    </section>
+                    <section>
+                        <pre><code contenteditable class="PHP">
 $squares = new List&lt;Square&gt;();
 
+function f( List&lt;Shape&gt; $list ) { /* ... */ }
+                        </code></pre>
+                        <pre class="fragment"><code contenteditable class="PHP">
 f( $squares );
-
+                        </code></pre>
+                        <pre class="fragment"><code contenteditable class="PHP">
 function f( List&lt;Shape&gt; $list ) {
-					</code></pre>
-                    <pre class="fragment"><code contenteditable class="PHP">
     $list.add( new Circle() );
 }
-                    </code></pre>
+                        </code></pre>
 
-					<p class="fragment">The relationship is again not carried over</p>
+                        <p class="fragment">The relationship is again not carried over</p>
+                    </section>
 				</section>
 
                 <section data-state="blackout">
