--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -367,11 +367,17 @@ function f( List&lt;Shape&gt; $list ) {
                     <img src="img/i-has-question-lolcat.jpg" />
                 </section>
 
-				<section data-state="blackout">
-					<p><a href="http://bit.ly/solid-lsp">These slides: bit.ly/solid-lsp</a></p>
-					<p><a href="https://en.wikipedia.org/wiki/Liskov_substitution">Liskov substitution principle (WP)</a></p>
-					<p><a href="http://www.objectmentor.com/resources/articles/lsp.pdf">LSP (Robert C Martin, pdf)</a></p>
-				</section>
+                <section data-state="blackout">
+                    <p><a href="http://bit.ly/solid-lsp">These slides: bit.ly/solid-lsp</a></p>
+                    <p><a href="https://en.wikipedia.org/wiki/Liskov_substitution">Liskov substitution principle (WP)</a></p>
+                    <p><a href="http://www.objectmentor.com/resources/articles/lsp.pdf">LSP (Robert C Martin, pdf)</a></p>
+                </section>
+
+                <section data-state="blackout">
+                    <h3>Attribution</h3>
+                    <p>"WTF cat" by Bjorn Hermans, CC BY-NC-ND 2.0</p>
+                    <p>"Reflection cat" by Nikos Koutoulas, CC BY 2.0</p>
+                </section>
             </div>
 
     </div>
