--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -134,7 +134,7 @@ class Rectange {
 				</section>
 
 				<section>
-					<h3>To many fields</h3>
+					<h3>Too many fields</h3>
 
 					<pre><code contenteditable class="PHP">
 class Rectange {
