Style imporvements to LSP slides

--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -245,8 +245,7 @@ class Rectangle extends Square {
 					<p class="fragment">Never pass a Square into a method expecting Rectangle</p>
 
 					<p class="fragment">
-						But but but!
-						<br />Is a square not a rectangle?!
+						Square <b>is not a</b> Rectangle
 					</p>
 				</section>
 
@@ -261,8 +260,6 @@ class Rectangle extends Square {
 				</section>
 
 				<section>
-					<p>Nope</p>
-
 					<p>Squares are rectangles</p>
 
 					<pre class="fragment"><code contenteditable class="PHP">
