--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -279,7 +279,7 @@ class Square {
 				<section data-background="img/cat-reflection.jpg" data-transition="linear" data-background-transition="slide">
 					<h3 class="shadow">Representatives</h3>
 
-					<p class="fragment" class="shadow">Do not share the relationships of the things they represent</p>
+					<p class="fragment shadow">Do not share the relationships of the things they represent</p>
 				</section>
 
 				<section>
