--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -44,13 +44,13 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
 
-                <section>
-                    <h2>SOLID inheritance</h2>
-                    <p>
+                <section data-background="img/wall.jpg" data-transition="linear">
+                    <h2 style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">SOLID inheritance</h2>
+                    <p class="shadow">
                         The Liskov Substitution Principle
                     </p>
 
-                    <p>
+                    <p class="shadow">
                         <br />
                         <small>
                             Created by
@@ -61,7 +61,7 @@
                         </small>
                     </p>
 
-                    <p><br /><a href="http://bit.ly/solid-lsp">
+                    <p class="shadow"><br /><a href="http://bit.ly/solid-lsp">
                         http://bit.ly/solid-lsp
                     </a></p>
                 </section>
@@ -254,7 +254,7 @@ class Rectangle extends Square {
 				</section>
 
 				<section data-background="img/cat-wat.jpg" data-transition="linear" data-background-transition="slide">
-					<h3 class="shadow">WTF?</h3>
+					<h3 style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">WTF?</h3>
 
 					<p class="shadow">Squares are not rectangles?!</p>
 
@@ -277,7 +277,7 @@ class Square {
 				</section>
 
 				<section data-background="img/cat-reflection.jpg" data-transition="linear" data-background-transition="slide">
-					<h3 class="shadow">Representatives</h3>
+					<h3 style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">Representatives</h3>
 
 					<p class="fragment shadow">Do not share the relationships of the things they represent</p>
 				</section>
@@ -379,7 +379,9 @@ function f( List&lt;Shape&gt; $list ) {
                     <p class="shadow">"WTF cat" by Bjorn Hermans, CC BY-NC-ND 2.0</p>
                     <p class="shadow">"Reflection cat" by Nikos Koutoulas, CC BY 2.0</p>
                     <p class="shadow">"Questions cat" by Linda Tanner, CC BY 2.0</p>
-                    <p class="shadow">"Attribution cat" by  Florencia Lewis, CC BY 2.0</p>
+                    <p class="shadow">"Attribution cat" by Florencia Lewis, CC BY 2.0</p>
+                    <p class="shadow">"The wall" by David R. Tribble, CC BY-SA 3.0</p>
+                    <p class="shadow">The slides by Jeroen De Dauw, CC BY-SA 3.0</p>
                 </section>
             </div>
 
