--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -375,7 +375,7 @@ function f( List&lt;Shape&gt; $list ) {
                 </section>
 
                 <section data-background="img/cattribution.jpg">
-                    <h3 class="shadow">Cattribution</h3>
+                    <h3 class="shadow"><span class="shadow">Cattribution</span></h3>
                     <p class="shadow">"WTF cat" by Bjorn Hermans, CC BY-NC-ND 2.0</p>
                     <p class="shadow">"Reflection cat" by Nikos Koutoulas, CC BY 2.0</p>
                     <p class="shadow">"Questions cat" by Linda Tanner, CC BY 2.0</p>
