--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -45,20 +45,18 @@
             <div class="slides">
 
                 <section data-background="img/wall.jpg" data-transition="linear">
-                    <h2 style="text-shadow: 1px 1px 3px #000, 4px 4px 5px darkblue;">SOLID inheritance</h2>
-                    <p class="shadow">
+                    <h2><span class="shadow">SOLID inheritance</span></h2>
+                    <p class="shadow" style="font-size: larger">
                         The Liskov Substitution Principle
                     </p>
 
                     <p class="shadow">
                         <br />
-                        <small>
-                            Created by
-                            <a href="https://github.com/JeroenDeDauw">Jeroen De Dauw</a>
-                            for <a href="https://wikimedia.de/">Wikimedia Deutschland</a>
-                            <br />
-                            Licensed <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
-                        </small>
+                        Created by
+                        <a href="https://github.com/JeroenDeDauw">Jeroen De Dauw</a>
+                        for <a href="https://wikimedia.de/">Wikimedia Deutschland</a>
+                        <br />
+                        Licensed <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
                     </p>
 
                     <p class="shadow"><br /><a href="http://bit.ly/solid-lsp">
