--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -94,8 +94,8 @@
                         * Duck typing - message passing
                     </aside>
 
-                    <p class="fragment">Static inheritance</p>
-                    <p class="fragment">Duck typing</p>
+                    <p>Static inheritance</p>
+                    <p>Duck typing</p>
                 </section>
 
 				<section>
@@ -103,10 +103,6 @@
 					<p>
 						Or not?
 					</p>
-				</section>
-
-				<section>
-					<h3>Unexpected side effect(s)</h3>
 				</section>
 
 				<section>
