--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -152,7 +152,7 @@ class Rectange {
 class Square extends Rectangle {}
 					</code></pre>
 
-					<p class="fragment">Lets not care, enough memory anyway!</p>
+					<p class="fragment">Let's not care, enough memory anyway!</p>
 					<p class="fragment">But what about <code>setHeight</code> and <code>setWidth</code>?</p>
 					<p class="fragment">Width and height need to be the same</p>
 				</section>
