--- a/craftmanship/LSP/index.html
+++ b/craftmanship/LSP/index.html
@@ -44,7 +44,7 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
 
-                <section data-background="img/wall.jpg" data-transition="linear">
+                <section data-background="img/wall2.jpg" data-transition="linear">
                     <h2><span class="shadow">SOLID inheritance</span></h2>
                     <p class="shadow" style="font-size: larger">
                         The Liskov Substitution Principle
