--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -55,6 +55,10 @@
 				</section>
 
 				<section data-transition="linear">
+					<img src="img/moar-cats.gif" alt="Y U NO LOAD" class="fragment" />
+				</section>
+
+				<section data-transition="linear">
 					<img src="img/statistics_cat.jpg" alt="Y U NO LOAD" />
 				</section>
 
@@ -62,7 +66,7 @@
 					<section>
 						<h3>Codebase</h3>
 
-						<p class="fragment">~25 developers last year, ~90 total</p>
+						<p>~25 developers last year, ~90 total</p>
 
 						<p class="fragment">
 							~1500 code changes (up ~0%, ~50%)
@@ -181,6 +185,10 @@
 						<span class="fragment">, including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;21</span> feature requests</span></p>
 				</section>
 
+				<section data-background-video="img/cat-lapse.webm">
+					<p>New features in SMW 2.1 - 2.3</p>
+				</section>
+
 				<section>
 					<section>
 						<h3>SMW 2.1</h3>
@@ -208,6 +216,12 @@
 					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
 						<h3>Contributing to the project</h3>
 
+						<img src="img/teamwork.gif" />
+					</section>
+
+					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
+						<h3>Contributing to the project</h3>
+
 						<ul>
 							<li class="fragment roll-in highlight-current-green">File bugs you find and enhancements you want</li>
 							<li class="fragment roll-in highlight-current-green">Become part of the testers group</li>
@@ -219,6 +233,10 @@
 						</ul>
 
 						<p class="fragment" style="color:#17ff2e"><br />Small and simple contributions are much appreciated</p>
+					</section>
+
+					<section data-background-video="img/why-u-no-play.webm">
+
 					</section>
 				</section>
 
@@ -240,7 +258,7 @@
 					</ul>
 				</section>
 
-				<section>
+				<section data-background-video="img/cat-approves-of-brush.webm">
 					<h3>Special:Attribution</h3>
 					<ul>
 						<li>The awesome work presented: <a href="https://semantic-mediawiki.org/wiki/Help:SMW_Project">SMW community</a></li>
