Add feature highlights

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -187,50 +187,68 @@
 					<p class="fragment"><span style="color:#17ff2e">~200</span> mails on <a href="http://sourceforge.net/p/semediawiki/mailman/semediawiki-devel/">semediawiki-devel</a></p>
 					<p class="fragment"><span style="color:#17ff2e">~5500</span> edits and <span style="color:#17ff2e">~1250</span> new pages on <a href="https://semantic-mediawiki.org/">semantic-mediawiki.org</a></p>
 					<p class="fragment">
-						<span style="color:#17ff2e">174</span> issues
-						<span class="fragment">, including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;21</span> feature requests</span></p>
+						<span style="color:#17ff2e">224 (174)</span> issues
+						<span class="fragment"><br />including <span style="color:#17ff2e">&gt;52</span> bugs and <span style="color:#17ff2e">&gt;32</span> feature requests</span></p>
 				</section>
 
-				<section data-background-video="img/cat-lapse.webm">
-					<p>New features in SMW 2.1 - 2.3</p>
+				<section>
+					<section data-background-video="img/cat-lapse.webm">
+						<p>New features in SMW 2.1 - 2.3</p>
+					</section>
+
+					<section>
+						<img src="img/smw2.2.jpg" class="fragment" />
+					</section>
 				</section>
 
 				<section>
 					<section>
-						<h3>SMW 2.1</h3>
+						<h3>SPARQLStore</h3>
 
-						<img src="img/smw2.2.jpg" class="fragment" />
+						<ul>
+							<li class="fragment">2.1: concepts</li>
+							<li class="fragment">2.1: regex queries<br />[[Title::~Sample*]] [[Title::!~Sample tes*]] for Page values<br />[[Url::~http://*query=*]] OR [[Url::~*ccc*]] for URL values</li>
+							<li class="fragment">2.3: redirects</li>
+							<li class="fragment">2.3: subcategories + subproperties</li>
+						</ul>
+
+						<p class="fragment">SQLStore feature parity!</p>
+
+						<p class="fragment">Performance improvements</p>
 					</section>
-
-					<section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"></section>
-					<section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
 
 					<section>
-						<p>The SPARQLStore now supports concept queries (#696) and regex like queries ([[Url::~http://*query=*]] OR [[Url::~*ccc*]]) for Page and URL values (#679).</p>
-					</section>
+						<p>SMW 2.0<span class="fragment" data-fragment-index="1"> v SMW 2.3</span></p>
 
+						<ul style="	vertical-align: text-top;">
+							<li style="color: #17ff2e">Fuseki</li>
+							<li style="color: #17ff2e">Virtuoso</li>
+							<li style="color: darkorange">4store</li>
+							<li style="color: darkorange">Sesame</li>
+						</ul>
+
+						<ul style="vertical-align: text-top;" class="fragment" data-fragment-index="1">
+							<li style="color: #17ff2e">Fuseki</li>
+							<li style="color: #17ff2e">Virtuoso</li>
+							<li style="color: darkorange">4store</li>
+							<li style="color: #17ff2e">Sesame</li>
+							<li style="color: #17ff2e" class="fragment">Blazegraph</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
 					<section>
 						<p>Postgres fully supported</p>
 					</section>
 				</section>
 
 				<section>
-					<section>
-						<h3>SMW 2.2</h3>
-					</section>
-
-					<section>
-					</section>
+					<section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"></section>
+					<section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
 				</section>
 
-				<section>
-					<section>
-						<h3>SMW 2.3</h3>
-					</section>
 
-					<section>
-					</section>
-				</section>
 
 				<section>
 					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
