Add platform compat stuff

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -203,6 +203,20 @@
 
 				<section>
 					<section>
+						<h3>Platform compatibility</h3>
+
+						<ul>
+							<li>Added MediaWiki 1.24 support (SMW 2.1)</li>
+							<li class="fragment">Added MediaWiki 1.25 support (SMW 2.2)</li>
+							<li class="fragment">Added HHVM 3.3+ support (SMW 2.1)</li>
+							<li class="fragment">Added beta support for PHP 7 (SMW 2.3)</li>
+							<li class="fragment">Added full PostgreSQL support (SMW 2.3)</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
 						<h3>SPARQLStore</h3>
 
 						<ul>
@@ -234,12 +248,18 @@
 							<li style="color: #17ff2e">Sesame</li>
 							<li style="color: #17ff2e" class="fragment">Blazegraph</li>
 						</ul>
+
+						<p class="fragment">semantic-mediawiki.org/wiki/Compatibility</p>
 					</section>
 				</section>
 
 				<section>
 					<section>
-						<p>Postgres fully supported</p>
+						<h3>Instant queries</h3>
+
+						<p>Experimental feature added in SMW 2.3</p>
+
+						<p>Video be here</p>
 					</section>
 				</section>
 
@@ -248,8 +268,6 @@
 					<section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
 				</section>
 
-
-
 				<section>
 					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
 						<h3>Contributing to the project</h3>
@@ -257,9 +275,7 @@
 						<img src="img/teamwork.gif" />
 					</section>
 
-					<section data-background="#006650" data-transition="linear" data-background-transition="slide">
-						<h3>Contributing to the project</h3>
-
+					<section data-background-video="img/why-u-no-play.webm">
 						<ul>
 							<li class="fragment roll-in highlight-current-green">File bugs you find and enhancements you want</li>
 							<li class="fragment roll-in highlight-current-green">Become part of the testers group</li>
@@ -271,10 +287,6 @@
 						</ul>
 
 						<p class="fragment" style="color:#17ff2e"><br />Small and simple contributions are much appreciated</p>
-					</section>
-
-					<section data-background-video="img/why-u-no-play.webm">
-
 					</section>
 				</section>
 
