Add instant queries

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -255,17 +255,33 @@
 
 				<section>
 					<section>
-						<h3>Instant queries</h3>
+						<img src="img/instant_queries.png" height="250"  class="fragment" alt="Y U NO LOAD" />
 
+						<table class="fragment">
+							<tr>
+								<td><img src="img/many_win.png" height="250px" alt="Y U NO LOAD" /></td>
+								<td><img src="img/much_win.png" height="250px" alt="Y U NO LOAD" /></td>
+							</tr>
+						</table>
+					</section>
+
+					<section>
 						<p>Experimental feature added in SMW 2.3</p>
 
-						<p>Video be here</p>
+						<p>Video be here https://www.youtube.com/watch?v=rXUPwmu5xCw</p>
 					</section>
 				</section>
 
 				<section>
 					<section data-background="img/SemSearch1.png" data-transition="linear" data-background-transition="slide"></section>
 					<section data-background="img/SemSearch2.png" data-transition="linear" data-background-transition="slide"></section>
+				</section>
+
+				<section>
+					<section>
+						SMW 3.0: MW, PHP
+						Features?
+					</section>
 				</section>
 
 				<section>
@@ -277,16 +293,16 @@
 
 					<section data-background-video="img/why-u-no-play.webm">
 						<ul>
-							<li class="fragment roll-in highlight-current-green">File bugs you find and enhancements you want</li>
-							<li class="fragment roll-in highlight-current-green">Become part of the testers group</li>
-							<li class="fragment roll-in highlight-current-green">Add or enhance documentation</li>
-							<li class="fragment roll-in highlight-current-green">Add or enhance translations</li>
-							<li class="fragment roll-in highlight-current-green">Answer questions and participate in discussions</li>
-							<li class="fragment roll-in highlight-current-green">Code review</li>
-							<li class="fragment roll-in highlight-current-green">Contribute code (correctly)</li>
+							<li class="fragment">File bugs you find and enhancements you want</li>
+							<li class="fragment">Become part of the testers group</li>
+							<li class="fragment">Add or enhance documentation</li>
+							<li class="fragment">Add or enhance translations</li>
+							<li class="fragment">Answer questions and participate in discussions</li>
+							<li class="fragment">Code review</li>
+							<li class="fragment">Contribute code (correctly)</li>
 						</ul>
 
-						<p class="fragment" style="color:#17ff2e"><br />Small and simple contributions are much appreciated</p>
+						<p class="fragment"><br />Small and simple contributions are much appreciated</p>
 					</section>
 				</section>
 
