--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -72,10 +72,10 @@
 					<section>
 						<h3>Codebase</h3>
 
-						<p>~25 developers last year, ~90 total</p>
+						<p><span style="color:#17ff2e">~25</span> developers last year, <span style="color:#17ff2e">~90</span> total</p>
 
 						<p class="fragment">
-							~1500 code changes (up ~0%, ~50%)
+							<span style="color:#17ff2e">~1500</span> code changes (up <span style="color:#17ff2e">~0%</span>, <span style="color:#17ff2e">~50%</span>)
 							<img src="img/commit_graph.jpg" alt="Y U NO LOAD">
 						</p>
 					</section>
@@ -103,11 +103,11 @@
 						<h3>Releases</h3>
 
 						<ul>
-							<li>2.1.0 <span style="color:gray">(+ 2.1.1, 2.1.2 & 2.1.3)</span></li>
-							<li>2.2.0 <span style="color:gray">(+ 2.2.1, 2.2.2 & 2.2.3)</span></li>
-							<li>2.3.0</li>
+							<li><span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">1</span>.<span style="color:#ccccff">0</span> <span style="color:gray">(+ 2.1.1, 2.1.2 & 2.1.3)</span></li>
+							<li><span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">2</span>.<span style="color:#ccccff">0</span> <span style="color:gray">(+ 2.2.1, 2.2.2 & 2.2.3)</span></li>
+							<li><span style="color:#ffcccc">2</span>.<span style="color:#ccffcc">3</span>.<span style="color:#ccccff">0</span></li>
 						</ul>
-						<p>3 feature releases + 6 bugfix releases</p>
+						<p><span style="color:#ccffcc">3</span> feature releases + <span style="color:#ccccff">6</span> bugfix releases</p>
 					</section>
 
 					<section>
@@ -206,11 +206,11 @@
 						<h3>Platform compatibility</h3>
 
 						<ul>
-							<li>Added MediaWiki 1.24 support (SMW 2.1)</li>
-							<li class="fragment">Added MediaWiki 1.25 support (SMW 2.2)</li>
-							<li class="fragment">Added HHVM 3.3+ support (SMW 2.1)</li>
-							<li class="fragment">Added beta support for PHP 7 (SMW 2.3)</li>
-							<li class="fragment">Added full PostgreSQL support (SMW 2.3)</li>
+							<li>Added <span style="color:#17ff2e">MediaWiki 1.24</span> support <span style="color:gray">(SMW 2.1)</span></li>
+							<li class="fragment">Added <span style="color:#17ff2e">MediaWiki 1.25</span> support <span style="color:gray">(SMW 2.2)</span></li>
+							<li class="fragment">Added <span style="color:#17ff2e">HHVM 3.3+</span> support <span style="color:gray">(SMW 2.1)</span></li>
+							<li class="fragment">Added <strong>beta</strong> support for <span style="color:#17ff2e">PHP 7</span> <span style="color:gray">(SMW 2.3)</span></li>
+							<li class="fragment">Added full <span style="color:#17ff2e">PostgreSQL</span> support <span style="color:gray">(SMW 2.3)</span></li>
 						</ul>
 					</section>
 				</section>
@@ -220,15 +220,19 @@
 						<h3>SPARQLStore</h3>
 
 						<ul>
-							<li class="fragment">2.1: concepts</li>
-							<li class="fragment">2.1: regex queries<br />[[Title::~Sample*]] [[Title::!~Sample tes*]] for Page values<br />[[Url::~http://*query=*]] OR [[Url::~*ccc*]] for URL values</li>
-							<li class="fragment">2.3: redirects</li>
-							<li class="fragment">2.3: subcategories + subproperties</li>
+							<li class="fragment"><span style="color:gray">2.1:</span> concepts</li>
+							<li class="fragment"><span style="color:gray">2.1:</span> regex queries<br />[[Title::~Sample*]] [[Title::!~Sample tes*]] for Page values<br />[[Url::~http://*query=*]] OR [[Url::~*ccc*]] for URL values</li>
+							<li class="fragment"><span style="color:gray">2.3:</span> redirects</li>
+							<li class="fragment"><span style="color:gray">2.3:</span> subcategories + subproperties</li>
 						</ul>
 
-						<p class="fragment">SQLStore feature parity!</p>
+						<p class="fragment"><strong>SQLStore feature parity!</strong></p>
 
 						<p class="fragment">Performance improvements</p>
+					</section>
+
+					<section>
+						<img src="img/pic-or-not-happen.jpeg" height="600px" alt="Y U NO LOAD" />
 					</section>
 
 					<section>
