Nyandata all the way accross the sky. omg

--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -221,18 +221,20 @@
 
 						<ul>
 							<li class="fragment"><span style="color:gray">2.1:</span> concepts</li>
-							<li class="fragment"><span style="color:gray">2.1:</span> regex queries<br />[[Title::~Sample*]] [[Title::!~Sample tes*]] for Page values<br />[[Url::~http://*query=*]] OR [[Url::~*ccc*]] for URL values</li>
+							<li class="fragment"><span style="color:gray">
+								2.1:</span> regex queries
+								<span class="fragment"><br /><small>Page values: [[Title::~Sample*]]  [[Title::!~Sample tes*]]</small></span>
+								<span class="fragment"><br /><small>URL values: [[Url::~http://*query=*]]  [[Url::~*ccc*]]</small></span>
+							</li>
 							<li class="fragment"><span style="color:gray">2.3:</span> redirects</li>
 							<li class="fragment"><span style="color:gray">2.3:</span> subcategories + subproperties</li>
 						</ul>
 
 						<p class="fragment"><strong>SQLStore feature parity!</strong></p>
-
-						<p class="fragment">Performance improvements</p>
 					</section>
 
-					<section>
-						<img src="img/pic-or-not-happen.jpeg" height="600px" alt="Y U NO LOAD" />
+					<section data-background="img/nyandata.gif">
+						<img src="img/pic-or-not-happen.jpeg" height="600px" alt="Y U NO LOAD" class="fragment" />
 					</section>
 
 					<section>
@@ -297,16 +299,16 @@
 
 					<section data-background-video="img/why-u-no-play.webm">
 						<ul>
-							<li class="fragment">File bugs you find and enhancements you want</li>
-							<li class="fragment">Become part of the testers group</li>
-							<li class="fragment">Add or enhance documentation</li>
-							<li class="fragment">Add or enhance translations</li>
-							<li class="fragment">Answer questions and participate in discussions</li>
-							<li class="fragment">Code review</li>
-							<li class="fragment">Contribute code (correctly)</li>
+							<li class="fragment shadow">File bugs you find and enhancements you want</li>
+							<li class="fragment shadow">Become part of the testers group</li>
+							<li class="fragment shadow">Add or enhance documentation</li>
+							<li class="fragment shadow">Add or enhance translations</li>
+							<li class="fragment shadow">Answer questions and participate in discussions</li>
+							<li class="fragment shadow">Code review</li>
+							<li class="fragment shadow">Contribute code (correctly)</li>
 						</ul>
 
-						<p class="fragment"><br />Small and simple contributions are much appreciated</p>
+						<p class="fragment shadow"><br />Small and simple contributions are much appreciated</p>
 					</section>
 				</section>
 
@@ -317,21 +319,21 @@
 				</section>
 
 				<section data-transition="linear">
-					<h3>Special:Links</h3>
+					<h3 class="shadow">Special:Links</h3>
 					<ul>
-						<li><a href="http://bit.ly/smw-2014">View slides bit.ly/smw-2015</a></li>
-						<li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub</a> (CC BY-SA 3.0 licensed)</li>
-						<li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
-						<li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
+						<li><a href="http://bit.ly/smw-2014" class="shadow">View slides bit.ly/smw-2015</a></li>
+						<li><a href="https://github.com/JeroenDeDauw/slides/" class="shadow">Slides on GitHub</a> (CC BY-SA 3.0 licensed)</li>
+						<li><a href="https://semantic-mediawiki.org" class="shadow">semantic-mediawiki.org</a></li>
+						<li><a href="https://twitter.com/#!/SemanticMW" class="shadow">@SemanticMW on Twitter</a></li>
 					</ul>
 				</section>
 
 				<section data-background-video="img/cat-approves-of-brush.webm">
-					<h3>Special:Attribution</h3>
+					<h3><span class="shadow">Special:Attribution</span></h3>
 					<ul>
-						<li>The awesome work presented: <a href="https://semantic-mediawiki.org/wiki/Help:SMW_Project">SMW community</a></li>
-						<li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
-						<li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2015 Hakim El Hattab</li>
+						<li class="shadow">The awesome work presented: <a href="https://semantic-mediawiki.org/wiki/Help:SMW_Project">SMW community</a></li>
+						<li class="shadow">Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
+						<li class="shadow">Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2015 Hakim El Hattab</li>
 					</ul>
 				</section>
 
