--- a/smwcon/2015fall/yearly/index.html
+++ b/smwcon/2015fall/yearly/index.html
@@ -329,7 +329,7 @@
 				</section>
 
 				<section data-background-video="img/cat-approves-of-brush.webm">
-					<h3><span class="shadow">Special:Attribution</span></h3>
+					<h3><span class="shadow">Special:Cattribution</span></h3>
 					<ul>
 						<li class="shadow">The awesome work presented: <a href="https://semantic-mediawiki.org/wiki/Help:SMW_Project">SMW community</a></li>
 						<li class="shadow">Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
